app: Add hover and brush to plots

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -523,16 +523,22 @@ DT::dataTableOutput("plot_sel")
 
 
 ```{r, echo=F}
-plotOutput("plot_ms1_eic")
+plotOutput("plot_ms1_eic",
+           hover = "plot_hover",
+           brush = "plot_brush")
 ```
 
 
 ```{r,echo=F}
-plotOutput("plot_ms2_eic")
+plotOutput("plot_ms2_eic",
+           hover = "plot_hover",
+           brush = "plot_brush")
 ```
 
 ```{r,echo=F}
-plotOutput("plot_ms2_spec")
+plotOutput("plot_ms2_spec",
+           hover = "plot_hover",
+           brush = "plot_brush")
 ```
 
 
